<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layoutDirection="ltr">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hsf_CARD_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/high_score_tittle_margin_bottom"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/hsf_LBL_top10scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:padding="20dp"
            android:shadowColor="@color/white"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/high_score_frg_top_10_scores_tittle_text"
            android:textColor="@color/black"
            android:textSize="@dimen/tittle_text_size"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hsf_CARD_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/hsf_CARD_title">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/table_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hsf_txtLBL_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_score_frg_header_tittle_rank_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hsf_txtLBL_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/high_score_frg_header_tittle_name_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hsf_txtLBL_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_score_frg_header_tittle_score_text"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hsf_txtLBL_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/high_score_frg_header_tittle_mode_text"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hsf_RV_records"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsf_CARD_header"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/leader_board_item" />

</androidx.constraintlayout.widget.ConstraintLayout>